huhu lai thay doi

--- a/aboutus.html
+++ b/aboutus.html
@@ -70,25 +70,10 @@
                         <h3>PhD. Diep Quynh Nhu</h3>                        
                         <div class="row">
                             <div class="col-lg-6">
-                                I am a researcher in the field of bioethanol production, enzyme activities and applying bio-products (enzyme, microorganism) 
-                                in environmental treatment and food processing using enzyme with 20 years of experience. My major is Biochemistry, I was granted a 
-                                Doctor degree by Hiroshima University, Japan in 2014. I used to work at Institute of Tropical Biology, VAST (2000-2007), Biomass Technology 
-                                Research Center-AIST, Hiroshima, Japan (2008-2012),株式会社建設環境研究所 , Tokyo (2012-2016). Recently I have successfully developed an enzyme 
-                                cocktail for pretreatment of sawdust. I have a keen interest in promoting the use of this product in mushroom cultivation, boosting the use of 
-                                other enzymes, probiotics products in environmental treatment, Agriculture, Aquaculture, Food processing, Husbandairy sectors and be an active 
-                                technical consultant based on my expertise.
+                                I am a researcher in the field of Renewable Energy Development (Bioethanol, Biogas), enzyme activities and applying bio-products (enzyme, microorganism) in environmental treatment, food processing, and feed additives with 20 years of experience. My major is Biochemistry, I was granted a Doctor degree by Hiroshima University, Japan in 2014. I used to work at Institute of Tropical Biology, VAST (2000-2007), Biomass Technology Research Center-AIST, Hiroshima, Japan (2008-2012), 株式会社建設環境研究所, Tokyo (2012-2016). Recently I have successfully developed an enzyme cocktail for pretreatment of cellulosic biomass (sawdust, cotton, agricultural waste). I have a keen interest in promoting the use of this product in mushroom cultivation, boosting the use of other enzyme group, probiotics in environmental treatment, Agriculture, Aquaculture, Food processing, husbandry sectors and be an active technical consultant based on my expertise.
                             </div>
                             <div class="col-lg-6">
-                                Tôi là nhà nghiên cứu trong lĩnh vực sản xuất cồn sinh học,
-                                 hoạt động của enzyme và ứng dụng các chế phẩm sinh học (enzyme, vi sinh vật) 
-                                 trong xử lý môi trường và chế biến thực phẩm sử dụng enzyme với 20 năm kinh nghiệm. 
-                                 Chuyên ngành của tôi là Hóa sinh, tôi đã được Đại học Hiroshima, Nhật Bản cấp bằng Tiến sĩ năm 2014. 
-                                 Tôi từng công tác tại Viện Sinh học nhiệt đới, VAST (2000-2007), 
-                                 Trung tâm Nghiên cứu Công nghệ Sinh khối-AIST, Hiroshima, Nhật Bản (2008-2012) ), 株式会社 建設 環境 研究所, 
-                                 Tokyo (2012-2016). Gần đây tôi đã phát triển thành công một loại cocktail enzyme để tiền xử lý mùn cưa. 
-                                 Tôi quan tâm đến việc thúc đẩy việc sử dụng sản phẩm này trong trồng nấm, đẩy mạnh sử dụng các enzym khác, 
-                                 các chế phẩm sinh học trong xử lý môi trường, các ngành Nông nghiệp, Nuôi trồng thủy sản, Chế biến thực phẩm, 
-                                 Chăn nuôi và là một nhà tư vấn kỹ thuật tích cực dựa trên chuyên môn.
+                                Là nghiên cứu viên hoạt động trong  lĩnh vực  năng lượng tái tạo (cồn sinh học, biogas), nghiên cứu hoạt tính của enzyme và ứng dụng các chế phẩm sinh học (enzyme, vi sinh) trong xử lý môi trường và chế biến thực phẩm, bổ sung thức ăn gia súc với 20 năm kinh nghiệm. Chuyên ngành của tôi là Hóa sinh, được Đại học Hiroshima, Nhật Bản cấp bằng Tiến sĩ năm 2014. Tôi từng công tác tại Viện Sinh học nhiệt đới, VAST (2000-2007), Trung tâm Nghiên cứu Công nghệ Sinh khối-AIST, Hiroshima, Nhật Bản (2008-2012) ), 株式会社 建設 環境 研究所, Tokyo (2012-2016). Gần đây tôi đã phát triển thành công sản phẩm cocktail enzyme để tiền xử lý cơ chất giàu cellulose (mùn cưa, bông, phế thải nông nghiệp). Tôi quan tâm đến việc thúc đẩy việc sử dụng sản phẩm này trong trồng nấm, đẩy mạnh sử dụng các nhóm enzym khác, các chế phẩm sinh học trong xử lý môi trường, Nông nghiệp, Nuôi trồng thủy sản, Chế biến thực phẩm, Chăn nuôi và là một nhà tư vấn kỹ thuật tích cực dựa trên lĩnh vực chuyên môn sâu về Hóa sinh, Vi sinh.
                             </div>
                         </div>
                         </div>
@@ -98,10 +83,10 @@
                             <img class="profile" src="image/image7.png" alt="">
                         </div>
                         <div class="col-lg-9">
-                            <h3>Tran Quoc Tuan</h3>                        
+                            <h3>Eng. Tran Quoc Tuan</h3>                        
                             <div class="row">
                                 <div class="col-lg-6">
-                                   <p> TI am an engineer, have grown mushrooms for over 10 years. In 2019, I established Bao Gia Long An Co., Ltd, cooperating with other mushroom farms to build a network for sharing experiences in growing mushrooms and the market. My business is involved in technology transfer of mushroom cultivation; selling products from mushrooms; supplies other necessary materials and equipment for the mushroom farm. Applying enzymes in sawdust pretreatment to grow mushrooms is a change for the better, considered as a cutting-edge revolution in mushroom industry.
+                                   <p> I am an engineer, have grown mushrooms for over 10 years. In 2019, I established Bao Gia Long An Co., Ltd, cooperating with other mushroom farms to build a network for sharing experiences in growing mushrooms and the market. My business is involved in technology transfer of mushroom cultivation; selling products from mushrooms; supplies other necessary materials and equipment for the mushroom farm. Applying enzymes in sawdust pretreatment to grow mushrooms is a change for the better, considered as a cutting-edge revolution in mushroom industry.
                                     Phạm Tuân </p>
                                 </div>
                                 <div class="col-lg-6">
