--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <i class="fas fa-phone-volume fa-4x"></i> <h3 class="ml-3 mt-3">Contact</h3>
 
                         </div>
-                        <p>PhD. Diep Quynh Nhu</p>
+                        <p>Ms. Diep Quynh Nhu</p>
                         <p>Phone: (+84)949 583 418</p>
                         <p>E-mail: diepquynhnhu@gmail.com</p>
                         <p>Website: 
@@ -174,10 +174,5 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<!-- Your Chat Plugin code -->
-<div class="fb-customerchat"
-  attribution="setup_tool"
-  page_id="319274544847868">
-</div>
 </body>
 </html>
