--- a/mushroomculti.html
+++ b/mushroomculti.html
@@ -64,9 +64,9 @@
     <!--- Content -->    
     <div class="container-fluid">
                 <div class="row mx-auto mt-5 padding">
-                    <div class="col-lg-6 ">
+                    <div class="col-lg-6">
                         <h4>Enzym xử lý nguyên liệu trồng nấm</h4>
-                        <h5 class="text-center">Tên thương mại: Maxigest (C+X)</h5>
+                        <h5 class="text-center">Tên thương mại: <span class="font-weight-bold" style="color: #2e41a1;">Maxigest (C+X)</span></h5>
                         <p><span class="font-weight-bold">Thành phần:</span></p>
                         <p>amylase: > 8.000.000 U/kg</p>
                         <p>xylanase: >10.000.000 U/kg</p>
