--- a/mushroomculti.html
+++ b/mushroomculti.html
@@ -1,152 +1,330 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Enzyme</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
-    <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Enzyme</title>
+		<!-- Bootstrap CSS -->
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		/>
+		<link rel="icon" href="image/logo_title.png" type="image/x-icon" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+		<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
+		<script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 
-    <!-- CSS only -->
-    <link href="index.css" rel="stylesheet">
-    <link href="mushroomculti.css" rel="stylesheet">
+		<!-- CSS only -->
+		<link href="index.css" rel="stylesheet" />
+		<link href="mushroomculti.css" rel="stylesheet" />
 
-    <title>Document</title>
-</head>
-<body>
-        <!-- Navigation -->
+		<title>Document</title>
+	</head>
+	<body>
+		<!-- Navigation -->
+		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+			<a class="navbar-brand" href="#"
+				><img class="main-logo" src="image/logo.png" alt=""
+			/></a>
+			<div
+				class="container-fluid navigation justify-content-center"
+				style="display: table-cell; vertical-align: middle"
+			>
+				<div class="row">
+					<ul class="nav justify-content-around">
+						<li class="nav-item">
+							<a class="btn btn-light nav-link" type="button" href="index.html"
+								>Home</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="btn btn-light nav-link"
+								type="button"
+								href="aboutus.html"
+								>About us</a
+							>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="btn btn-light nav-link dropdown-toggle"
+								type="button"
+								href="#"
+								id="navbarDropdown"
+								role="button"
+								data-toggle="dropdown"
+								aria-haspopup="true"
+								aria-expanded="false"
+							>
+								Product
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" href="#"
+									>Enzyme for mushroom cultivation</a
+								>
+								<a class="dropdown-item" href="envitreatment.html"
+									>Enzyme for environmental treatment</a
+								>
+								<a class="dropdown-item" href="envifeed.html"
+									>Enzyme for feeding - Feed additives</a
+								>
+								<a class="dropdown-item" href="envifood.html"
+									>Enzyme for Maltose production</a
+								>
+							</div>
+						</li>
+						<li class="nav-item">
+							<a
+								class="btn btn-light nav-link"
+								type="button"
+								href="service.html"
+								>Service</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="btn btn-light nav-link"
+								type="button"
+								href="research.html"
+								>Reseach Finding</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="btn btn-light nav-link" type="button" href="faq.html"
+								>FAQ</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="btn btn-light nav-link"
+								type="button"
+								href="contact.html"
+								>Contact</a
+							>
+						</li>
+						<li>
+							<i class="fa fa-phone fa_custom fa-2x"></i>
+							<span class="text-danger">(+84)949 583 418</span>
+						</li>
+					</ul>
+				</div>
+				<div
+					class="row"
+					style="
+						flex-direction: row-reverse;
+						padding-right: 2rem;
+						padding-top: 0.5rem;
+					"
+				>
+					<select class="vodiapicker">
+						<option
+							value="us"
+							class="test"
+							data-thumbnail="image/united-states.svg"
+						>
+							English
+						</option>
+						<option value="vn" data-thumbnail="image/vietnam.svg">
+							Vietnamese
+						</option>
+					</select>
 
-        <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-            <a class="navbar-brand" href="#"><img class="main-logo" src="image/logo.png" alt=""></a>
-            <div class="container-fluid navigation justify-content-center">
-                    <ul class="nav justify-content-around">
-                        <li class="nav-item">
-                            <a class="btn btn-light nav-link" type="button"  href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                            <a class="btn btn-light nav-link" type="button" href="aboutus.html">About us</a>
-                                </li>
-                        <li class="nav-item dropdown">
-                            <a class="btn btn-light nav-link dropdown-toggle" type="button" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Product
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="mushroomculti.html">Enzyme for mushroom cultivation</a>
-                                <a class="dropdown-item" href="envitreatment.html">Enzyme for environmental treatment</a>
-                                <a class="dropdown-item" href="envifeed.html">Enzyme for feeding - Feed additives</a>
-                                <a class="dropdown-item" href="envifood.html">Enzyme for Maltose production</a>
-                            </div>
-                                </li>
-                                <li class="nav-item">
-                            <a class="btn btn-light nav-link" type="button" href="#">Service</a>
-                                </li>
-                                <li class="nav-item">
-                            <a class="btn btn-light nav-link" type="button" href="#">Reseach Finding</a>
-                                </li>
-                        <li class="nav-item">
-                            <a class="btn btn-light nav-link" type="button" href="faq.html">FAQ</a>
-                        </li>
-                      <li class="nav-item">
-                        <a class="btn btn-light nav-link" type="button" href="#">Contact</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-phone fa_custom fa-2x"></i> <span class="text-danger">(+84)949 583 418</span>
-                    </li>
-                    </ul>
-            </div>
-        </nav>
+					<div class="lang-select">
+						<button class="btn-select" value=""></button>
+						<div class="b">
+							<ul id="a"></ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</nav>
 
-    <!--- Content -->    
-    <div class="container-fluid">
-                <div class="row mx-auto mt-5 padding">
-                    <div class="col-lg-6">
-                        <h4>Enzym xử lý nguyên liệu trồng nấm</h4>
-                        <h5 class="text-center">Tên thương mại: <span class="font-weight-bold" style="color: #2e41a1;">Maxigest (C+X)</span></h5>
-                        <p><span class="font-weight-bold">Thành phần:</span></p>
-                        <p>amylase: > 8.000.000 U/kg</p>
-                        <p>xylanase: >10.000.000 U/kg</p>
-                        <p>mannanase:> 4.000.000 U/kg</p>
-                        <p>pectinase: >12.000.000 U/kg</p>
-                        <p>cellulase: >12.000.000 U/kg</p>
-                        <p>beta glucanase: 1.000.000 U/kg</p>
-                        <p>Laccase: >10.000.000 U/kg</p>
-                        <p><span class="font-weight-bold">Liều dùng: </span>30-50 gr/tấn nguyên liệu</p>
-                        <p><span class="font-weight-bold">Hướng dẫn sử dụng: </span><a target="_blank" href="doc/Giới thiệu sản phẩm enzym xử lý nguyên liệu trồng nấm (revised).pdf">click here</a></p>
-                        <p><span class="font-weight-bold">Giá bán: </span>200,000 đ/100gr</p>
-                        <p><span class="font-weight-bold">Qui cách: </span>dạng bột đóng gói 200 gr, 1kg</p>
-                        <p><span class="font-weight-bold">Nguồn: </span>Enzym nhập khẩu từ Ấn Độ, Nhật,  USA.</p>
-                    </div>
-                    <div class="col-lg-6 text-center d-flex align-start">
-                        <img src="image/image15.png" alt="">
-                        </div>
-        </div>
-        <div class="row justify-content-center">
-            <!-- <div class="col-lg-12"> -->
-                <img src="image/image1.gif" alt="">
-                <img src="image/Picture2.gif" alt="">
-                <img src="image/Picture3.gif" alt="">
-            <!-- </div> -->
-    </div>
-        <div class="row mx-auto mt-5 padding">
-            <div class="col-lg-6 ">
-                <img src="image/unnamed.jpg" alt="">
-            </div>
-            <div class="col-lg-6 text-center d-flex align-start">
-                <img src="image/Picture1.png" alt="">
-            </div>
-</div>
-    </div>
+		<!--- Content -->
+		<div class="container-fluid">
+			<div class="row mx-auto mt-5 padding">
+				<div class="col-lg-6">
+					<h4>Enzym xử lý nguyên liệu trồng nấm</h4>
+					<h5 class="text-center">
+						Tên thương mại:
+						<span class="font-weight-bold" style="color: #2e41a1"
+							>Maxigest (C+X)</span
+						>
+					</h5>
+					<p><span class="font-weight-bold">Thành phần:</span></p>
+					<p>amylase: > 8.000.000 U/kg</p>
+					<p>xylanase: >10.000.000 U/kg</p>
+					<p>mannanase:> 4.000.000 U/kg</p>
+					<p>pectinase: >12.000.000 U/kg</p>
+					<p>cellulase: >12.000.000 U/kg</p>
+					<p>beta glucanase: 1.000.000 U/kg</p>
+					<p>Laccase: >10.000.000 U/kg</p>
+					<p>
+						<span class="font-weight-bold">Liều dùng: </span>30-50 gr/tấn nguyên
+						liệu
+					</p>
+					<p>
+						<span class="font-weight-bold">Hướng dẫn sử dụng: </span
+						><a
+							target="_blank"
+							href="doc/Giới thiệu sản phẩm enzym xử lý nguyên liệu trồng nấm (revised).pdf"
+							>click here</a
+						>
+					</p>
+					<p><span class="font-weight-bold">Giá bán: </span>200,000 đ/100gr</p>
+					<p>
+						<span class="font-weight-bold">Qui cách: </span>dạng bột đóng gói
+						200 gr, 1kg
+					</p>
+					<p>
+						<span class="font-weight-bold">Nguồn: </span>Enzym nhập khẩu từ Ấn
+						Độ, Nhật, USA.
+					</p>
+				</div>
+				<div class="col-lg-6 text-center d-flex align-start">
+					<img src="image/image15.png" alt="" />
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<!-- <div class="col-lg-12"> -->
+				<img src="image/image1.gif" alt="" />
+				<img src="image/Picture2.gif" alt="" />
+				<img src="image/Picture3.gif" alt="" />
+				<!-- </div> -->
+			</div>
+			<div class="row mx-auto mt-5 padding">
+				<div class="col-lg-6">
+					<img src="image/unnamed.jpg" alt="" />
+				</div>
+				<div class="col-lg-6 text-center d-flex align-start">
+					<img src="image/Picture1.png" alt="" />
+				</div>
+			</div>
+		</div>
 
-    <!--- Footer -->
-    <footer>
-        <div class="container-fluid" style="background:#1f1f1f;">
-            <div class="row text-center" style="margin-right: 0px;">
-                <div class="col-md-12 col-xl-12" >
-                    <a href="https://www.facebook.com/diep.nhu" target="_blank">
-                        <i class="fab fa-facebook fa-2x"></i>
-                    </a>
-                    <a href="https://www.instagram.com/kencocoon/?hl=en" target="_blank">
-                        <i class="fab fa-instagram fa-2x"></i>
-                    </a>
-                    <a href="https://www.researchgate.net/profile/Nhu_Diep" target="_blank">
-                        <i class="fab fa-researchgate fa-2x"></i>
-                    </a>
-                </div>
-                <div class="col-md-12 col-xl-12">
-                    <p>No. 77, 26/3 St., Ha Tinh City, Ha Tinh Province, Vietnam</p>
-                    <p>+84 949 583 418</p>
-                    <p>diepquynhnhu@gmail.com</p>
-                </div>
-                <div class="col-md-12 col-xl-12" style="background:#000000;color:#919191">
-                    <hr class="light">
-                    <h5>Copyright &copy;2021 All rights reserved | This Website is made by Dang Diep Hoa Thien </h5>
-                </div>
-            </div>
-        </div>
-    </footer> 
+		<!--- Footer -->
+		<footer>
+			<div class="container-fluid" style="background: #1f1f1f">
+				<div class="row text-center" style="margin-right: 0px">
+					<div class="col-md-12 col-xl-12">
+						<a href="https://www.facebook.com/diep.nhu" target="_blank">
+							<i class="fab fa-facebook fa-2x"></i>
+						</a>
+						<a
+							href="https://www.instagram.com/kencocoon/?hl=en"
+							target="_blank"
+						>
+							<i class="fab fa-instagram fa-2x"></i>
+						</a>
+						<a
+							href="https://www.researchgate.net/profile/Nhu_Diep"
+							target="_blank"
+						>
+							<i class="fab fa-researchgate fa-2x"></i>
+						</a>
+					</div>
+					<div class="col-md-12 col-xl-12">
+						<p>No. 77, 26/3 St., Ha Tinh City, Ha Tinh Province, Vietnam</p>
+						<p>+84 949 583 418</p>
+						<p>diepquynhnhu@gmail.com</p>
+					</div>
+					<div
+						class="col-md-12 col-xl-12"
+						style="background: #000000; color: #919191"
+					>
+						<hr class="light" />
+						<h5>
+							Copyright &copy;2021 All rights reserved | This Website is made by
+							Dang Diep Hoa Thien
+						</h5>
+					</div>
+				</div>
+			</div>
+		</footer>
 
-    <!-- Load Facebook SDK for JavaScript -->
-    <div id="fb-root"></div>
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          xfbml            : true,
-          version          : 'v9.0'
-        });
-      };
+		<!-- Load Facebook SDK for JavaScript -->
+		<div id="fb-root"></div>
+		<script>
+			window.fbAsyncInit = function () {
+				FB.init({
+					xfbml: true,
+					version: 'v10.0',
+				});
+			};
 
-      (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
+			(function (d, s, id) {
+				var js,
+					fjs = d.getElementsByTagName(s)[0];
+				if (d.getElementById(id)) return;
+				js = d.createElement(s);
+				js.id = id;
+				js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+				fjs.parentNode.insertBefore(js, fjs);
+			})(document, 'script', 'facebook-jssdk');
+		</script>
 
-</body>
+		<!-- Your Chat Plugin code -->
+		<div
+			class="fb-customerchat"
+			attribution="setup_tool"
+			page_id="319274544847868"
+		></div>
+		<script>
+			var langArray = [];
+			$('.vodiapicker option').each(function () {
+				var img = $(this).attr('data-thumbnail');
+				var text = this.innerText;
+				var value = $(this).val();
+				var item =
+					'<li><img src="' +
+					img +
+					'" alt="" value="' +
+					value +
+					'"/><span>' +
+					text +
+					'</span></li>';
+				langArray.push(item);
+			});
+
+			$('#a').html(langArray);
+
+			//Set the button value to the first el of the array
+			$('.btn-select').html(langArray[0]);
+			$('.btn-select').attr('value', 'en');
+
+			//change button stuff on click
+			$('#a li').click(function () {
+				var img = $(this).find('img').attr('src');
+				var value = $(this).find('img').attr('value');
+				var text = this.innerText;
+				var item =
+					'<li><img src="' + img + '" alt="" /><span>' + text + '</span></li>';
+				$('.btn-select').html(item);
+				$('.btn-select').attr('value', value);
+				$('.b').toggle();
+				//console.log(value);
+			});
+
+			$('.btn-select').click(function () {
+				$('.b').toggle();
+			});
+
+			//check local storage for the lang
+			var sessionLang = localStorage.getItem('lang');
+			if (sessionLang) {
+				//find an item with value of sessionLang
+				var langIndex = langArray.indexOf(sessionLang);
+				$('.btn-select').html(langArray[langIndex]);
+				$('.btn-select').attr('value', sessionLang);
+			} else {
+				var langIndex = langArray.indexOf('ch');
+				console.log(langIndex);
+				$('.btn-select').html(langArray[langIndex]);
+				//$('.btn-select').attr('value', 'en');
+			}
+		</script>
+	</body>
 </html>
